; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csproc_get_platform_binary.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csproc_get_platform_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.cs_blob = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @csproc_get_platform_binary(%struct.proc* %0) #0 {
  %2 = alloca %struct.proc*, align 8
  %3 = alloca %struct.cs_blob*, align 8
  store %struct.proc* %0, %struct.proc** %2, align 8
  %4 = load %struct.proc*, %struct.proc** %2, align 8
  %5 = call %struct.cs_blob* @csproc_get_blob(%struct.proc* %4)
  store %struct.cs_blob* %5, %struct.cs_blob** %3, align 8
  %6 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %7 = icmp eq %struct.cs_blob* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %13

9:                                                ; preds = %1
  %10 = load %struct.cs_blob*, %struct.cs_blob** %3, align 8
  %11 = getelementptr inbounds %struct.cs_blob, %struct.cs_blob* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  br label %13

13:                                               ; preds = %9, %8
  %14 = phi i32 [ 0, %8 ], [ %12, %9 ]
  ret i32 %14
}

declare dso_local %struct.cs_blob* @csproc_get_blob(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
